# t3dimize

./: .gitignore  README.md  pom.xml
cpp/: CMakeLists.txt  include.h  main.cpp
java/src/main/java/com/github/zanmato/t3dimize/: Main.java
